--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -5,37 +5,33 @@
       .col-md-6
         .blue_block.sign-up-box
           #mc_embed_signup
-            %form#mc-embedded-subscribe-form.validate.form-horizontal{:action => "https://selfdot.us20.list-manage.com/subscribe/post", :method => "post", :name => "mc-embedded-subscribe-form", :target => "_blank"}
+            %form#mc-embedded-subscribe-form.validate.form-horizontal{:action => "https://selfdot.us20.list-manage.com/subscribe/post?u=eb1abec9dec44e154607f6849&id=28ad18140a", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank"}
               #mc_embed_signup_scroll
                 %p.center want to know about what we're doing and when? join our email list!
+
                 .form-group
-                  %label.col-md-4.control-label{:for => "MERGE0"}
+                  %label.col-md-4.control-label{:for => "mce-EMAIL"}
                     Email
                     %span.asterisk *
                   .col-md-8
-                    %input#MERGE0.required.email.form-control{:name => "MERGE0", :type => "email", :value => ""}/
+                    %input#mce-EMAIL.required.email.form-control{:name => "EMAIL", :type => "email", :value => ""}/
                 .form-group
-                  %label.col-md-4.control-label{:for => "MERGE1"}
+                  %label.col-md-4.control-label{:for => "mce-FNAME"}
                     First Name
                     %span.asterisk *
                   .col-md-8
-                    %input#MERGE1.required.form-control{:name => "MERGE1", :type => "text", :value => ""}/
+                    %input#mce-FNAME.required.form-control{:name => "FNAME", :type => "text", :value => ""}/
                 .form-group
-                  %label.col-md-4.control-label{:for => "MERGE2"}
+                  %label.col-md-4.control-label{:for => "mce-LNAME"}
                     Last Name
                     %span.asterisk *
                   .col-md-8
-                    %input#MERGE2.required.form-control{:name => "MERGE2", :type => "text", :value => ""}/
+                    %input#mce-LNAME.required.form-control{:name => "LNAME", :type => "text", :value => ""}/
                 #mce-responses.clear
                   #mce-error-response.response{:style => "display:none"}
                   #mce-success-response.response{:style => "display:none"}
-                %input{:name => "u", :type => "hidden", :value => "eb1abec9dec44e154607f6849"}/
-                %input{:name => "id", :type => "hidden", :value => "28ad18140a"}/
-                %input{:name => "ht", :type => "hidden", :value => "39d9547e8234c002473efb1f54a3f99f9d3323c0:MTU1OTkzNTg0My45MzI3"}/
-                %input{:name => "mc_signupsource", :type => "hidden", :value => "hosted"}/
+                / real people should not fill this in and expect good things - do not remove this or risk form bot signups
+                %div{"aria-hidden" => "true", :style => "position: absolute; left: -5000px;"}
+                  %input{:name => "b_eb1abec9dec44e154607f6849_28ad18140a", :tabindex => "-1", :type => "text", :value => ""}/
                 .center-wrapper
-                  %button#mc-embedded-subscribe.btn.button.orange-button{:name => "subscribe", :type => "submit", :value => "Subscribe"} Subscribe
-
-  %script{:src => "//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js", :type => "text/javascript"}
-  :javascript
-    (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='MERGE0';ftypes[0]='email';fnames[1]='MERGE1';ftypes[1]='text';fnames[2]='MERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+                  %input#mc-embedded-subscribe.btn.button.orange-button{:name => "subscribe", :type => "submit", :value => "Subscribe"}/
