--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -7,7 +7,7 @@
           #mc_embed_signup
             %form#mc-embedded-subscribe-form.validate.form-horizontal{:action => "https://selfdot.us20.list-manage.com/subscribe/post?u=eb1abec9dec44e154607f6849&id=28ad18140a", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank"}
               #mc_embed_signup_scroll
-                %p.center want to know about what we're doing and when? join our email list!
+                %p.center Want to know about what we're doing and when? Join our email list!
 
                 .form-group
                   %label.col-md-4.control-label{:for => "mce-EMAIL"}
