Add a dang bang

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -10,7 +10,7 @@
             = " - The software conference about tech and humans you already know and love!"
           %li= "<title of conf> - Tech conference, the musical!"
           %li self.work - A coworking space for us all to gather and work, at a price you can actually afford!
-          %li self.learn - Partnering up with shelters and community centers to bring basic computer and programming literacy to Detroit's underserved neighborhoods and homeless.
+          %li self.learn - Partnering up with shelters and community centers to bring basic computer and programming literacy to Detroit's underserved neighborhoods and homeless!
       .col-md-5
         .blue_block.sign-up-box
           #mc_embed_signup
