--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,7 +24,7 @@
               %span{style: "font-weight: 900;"}> self.
               org
               %ul.tag-line.lead{style: "line-height: 200%;"}
-                %li conference •
+                %li conferences •
                 %li training •
                 %li coworking
 
