--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,7 @@
     = javascript_include_tag "application"
     = stylesheet_link_tag "application", :media => "all"
   %body{"data-spy" => "scroll", "data-target" => ".navbar"}
+    = render 'application/favicon'
     -# = yield :nav
     .top_block
       .container
